--- a/sameshimaEDLD652final.Rmd
+++ b/sameshimaEDLD652final.Rmd
@@ -7,8 +7,8 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+# Libraries 
 ```{r}
-
 #Removing evrything from workspace
 rm(list = ls(all = TRUE))
 
@@ -27,7 +27,11 @@ library(corrplot)
 library(gee)
 library(ez)
 library(effects)
+library(grDevices) # added this since it couldn't find the `quartz()` function but then it still didn't work, I suspect b/c I have windows OS
+```
 
+# Data
+```{r}
 #======================================================================================================
 #Process1-Data Loading and Organization
 #======================================================================================================
@@ -79,8 +83,10 @@ ds<-ds%>%group_by(SUBID)%>%summarize(ACC=mean(ACC))%>%
 # Aggregate and run ANOVA
 # agg<-aggregate(ACC~SUBID+CUETYPE, data = ds, mean);
 # ezANOVA(agg, dv=ACC, wid = SUBID,within=CUETYPE)
+```
 
-
+# Behavioral Analysis
+```{r}
 #======================================================================================================
 #Process2-Behavior Analysis
 #======================================================================================================
@@ -106,6 +112,10 @@ rt_exp<-ds %>%
       group_by(CUETYPE) %>% 
         summarise_each(funs(mean, se=sd(.)/sqrt(n())),RT)
 
+```
+
+# Plot 1
+```{r}
 # Check individuals accuracy
 acc_ind<-ds %>% 
   group_by(SUBID,CUETYPE) %>% 
@@ -114,7 +124,10 @@ acc_ind<-ds %>%
 #  Ploting for check, correleation of individucal mean ACC values between invalid cue and valid cue trails (Data vis plot 1)   
 cor(acc_ind$ACC[acc_ind$CUETYPE=="valid"],acc_ind$ACC[acc_ind$CUETYPE=="invalid"])
 plot(acc_ind$ACC[acc_ind$CUETYPE=="valid"],acc_ind$ACC[acc_ind$CUETYPE=="invalid"])
+```
 
+# Modeling
+```{r}
 #======================================================================================================
 #Process3-Modeling
 #======================================================================================================
@@ -176,6 +189,10 @@ m=glmer(PCARD~1+CUECATb+(DV_1+DV_2+DV_3+DV_4)+
           (DV_1:DVCP2CUE_1+DV_2:DVCP2CUE_2+DV_3:DVCP2CUE_3+DV_4:DVCP2CUE_4)+
           (DV_2:DVCP2CUE_1+DV_3:DVCP2CUE_2+DV_4:DVCP2CUE_3)+(1|SUBID),family=binomial,data=ds)
 summary(m)
+```
+
+# Plot Setup
+```{r}
 #======================================================================================================
 #Process5-Plotting-ggplot2
 #======================================================================================================
@@ -205,7 +222,14 @@ EVnum<-rep(seq(1,4,1),2);stde<-rep(NA,1,8);#stde<-m$coefficients[2:13,2]
 ds_p<-data.frame(Estimate=c(coefs),cmp=cond,stderr=stde,EVnum=EVnum)
 
 ## Decision Weights,  beta values (regression coefficients) calculated sepaprately for trials with expectation cues congruet and incongruent with the correct trial identity (cardinal or diagonal) plotted on y with position of elements plotted on x   (Data vis plot 2)
-quartz(width=5,height=4)
+
+#grDevices::quartz(width=5,height=4) # i think this code is not reproducible for people with Windows OS
+
+
+```
+
+# Plot 2
+```{r}
 plot2 <- ggplot(ds_p, aes(x=EVnum, y=Estimate,group=cond,color=cond)) + 
   geom_errorbar(aes(ymin=Estimate-stderr, ymax=Estimate+stderr), width=.25,size=.5)+
   geom_line(size=2)+geom_point(size=6)+
@@ -225,7 +249,10 @@ scale_y_continuous(limits=c(0,1.5),breaks=seq(0,1.5,0.25))+
   theme(strip.text=element_text(family="Helvetica", face="bold",vjust=0.4,size=12))+
   theme(strip.background=element_blank())
 plot2
+```
 
+# Plot 3
+```{r}
 # Correlation of accuracy between valid and invalid cue trials, grouping subject ID by cuetype and calculating correlation on accuracy between trial cue type (Data vis plot 3)
 #Add referece line data 
 theme_set(theme_bw(base_size=18))#32/28
@@ -255,5 +282,6 @@ plot3 <- ggplot(acc_ind,aes(x=valid,y=invalid,size=1))+
   #   theme(axis.text.x=element_blank(),axis.ticks.x=element_blank())+
   theme(axis.title=element_text(family="Helvetica", face="bold",vjust=0.8))
 plot3
-
 ```
+
+
